# gnome-rs-learn

./: .gitignore
actions/: Cargo.toml  build.rs
actions/src/: main.rs
actions/src/custom_window/: imp.rs  mod.rs
actions/src/resources/: org.gtk_rs.Actions.gschema.xml  window.ui
composite_templates/: Cargo.toml  build.rs
composite_templates/src/: main.rs
composite_templates/src/custom_button/: imp.rs  mod.rs
composite_templates/src/custom_window/: imp.rs  mod.rs
composite_templates/src/resources/: resources.gresource.xml  window.ui
g_object_properties/: Cargo.toml
g_object_properties/src/: main.rs
g_object_properties/src/custom_button/: imp.rs  mod.rs
g_object_signals/: Cargo.toml
g_object_signals/src/: main.rs
g_object_signals/src/custom_button/: imp.rs  mod.rs
g_object_subclassing/: Cargo.toml
g_object_subclassing/src/: main.rs
g_object_values/: Cargo.toml
g_object_values/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
list_widgets/: Cargo.toml
list_widgets/src/: main.rs
listings/: Cargo.toml
listings/src/: main.rs
main_event_loop/: Cargo.toml
main_event_loop/src/: main.rs
saving_window_state/: Cargo.toml
saving_window_state/src/: main.rs
settings/: Cargo.toml  Readme.md
settings/src/: main.rs
to-do/: Cargo.toml  build.rs
to-do/src/: data.json  main.rs  utils.rs
to-do/src/custom_window/: imp.rs  mod.rs
to-do/src/resources/: org.gtk_rs.Todo.gschema.xml  resources.gresource.xml  style.css  window.ui
to-do/src/task_object/: imp.rs  mod.rs
to-do/src/task_row/: imp.rs  mod.rs
(+10 files in other folders)
