[package]
name = "to-do"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.6", package = "gtk4" }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"

[build-dependencies]
glib-build-tools = "0.17.10"
